Added ways to edit the item listings

--- a/MarketeerLog/App.xaml
+++ b/MarketeerLog/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application x:Class="MarketeerLog.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MarketeerLog"
+             xmlns:local="clr-namespace:MarketeerLog.ViewModel"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+            <local:DataEntryViewModel x:Key="DataEntryViewModel" />
     </Application.Resources>
 </Application>
