--- a/MarketeerLog/View/MainWindow.xaml
+++ b/MarketeerLog/View/MainWindow.xaml
@@ -7,20 +7,21 @@
         mc:Ignorable="d"
         Title="MarketeerLog" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="ListingDataGrid" ItemsSource="{Binding ListedItems}"  Margin="10,69,10,13" IsReadOnly="True" AutoGenerateColumns="False">
+        <DataGrid x:Name="ListingDataGrid" ItemsSource="{Binding ListedItems}" SelectedItem="{Binding SelectedListing, Mode=TwoWay}" SelectionUnit="FullRow"  Margin="10,69,10,13" IsReadOnly="True" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Product Name" Binding="{Binding Name}" />
                 <DataGridTextColumn Header="Listed Date" Binding="{Binding ListDate}" />
                 <DataGridTextColumn Header="Sell Date" Binding="{Binding SellDate}" />
-                <DataGridTextColumn Header="Purchase Price" Binding="{Binding PurchasePrice}" />
-                <DataGridTextColumn Header="Listed Price" Binding="{Binding ListedPrice}" />
-                <DataGridTextColumn Header="Profit" Binding="{Binding Profit}" />
+                <DataGridTextColumn Header="Purchase Price" Binding="{Binding PurchasePrice, StringFormat=C}" />
+                <DataGridTextColumn Header="Listed Price" Binding="{Binding ListedPrice, StringFormat=C}" />
+                <DataGridTextColumn Header="Profit" Binding="{Binding Profit, StringFormat=C}" />
                 <DataGridCheckBoxColumn Header="Sold?" Binding="{Binding Sold}" />
             </DataGrid.Columns>
 
 
         </DataGrid>
         <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="-118,-67,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="AddEntry" Content="AddEntry" Margin="10,44,0,0" HorizontalAlignment="Left" Width="71" Height="20" VerticalAlignment="Top" Click="AddEntry_Click"/>
+        <Button x:Name="AddEntry" Command="{Binding Path=AddEntryCommand}" Content="Add" Margin="10,44,0,0" HorizontalAlignment="Left" Width="71" Height="20" VerticalAlignment="Top" Click="AddEntry_Click"/>
+        <Button x:Name="EditEntry" Command="{Binding Path=EditEntryCommand}" Content="Edit" Margin="108,44,0,0" HorizontalAlignment="Left" Width="71" Height="20" VerticalAlignment="Top" Click="EditEntry_Click"/>
     </Grid>
 </Window>
