--- a/MarketeerLog/App.xaml
+++ b/MarketeerLog/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MarketeerLog.ViewModel"
-             StartupUri="View/MainWindow.xaml">
+             Startup="Application_Startup">
     <Application.Resources>
-            <local:DataEntryViewModel x:Key="DataEntryViewModel" />
+
     </Application.Resources>
 </Application>
